--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/fs-extra": "^11.0.1",
+    "@types/graphlib": "^2.1.8",
     "@types/node-cron": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "eslint": "^8.44.0",
@@ -23,6 +24,11 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "fs-extra": "^11.1.1",
+    "graph-data-structure": "^3.3.0",
+    "graphlib": "^2.1.8",
+    "i": "^0.3.7",
+    "npm": "^9.8.0",
     "ts-node": "^10.9.1"
   }
 }
